--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "version": "1.0.0",
   "license": "MIT",
   "scripts": {
-    "develop": "gatsby develop --prefix-paths",
+    "develop": "gatsby develop",
     "build": "gatsby build --prefix-paths"
   },
   "dependencies": {
